--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(MPI REQUIRED)
 find_package(OpenMP REQUIRED)
 
 add_executable(Project_2
-        file-creation.c)
+        send-recv-squared.c)
 
 # Enable MPI support
 target_include_directories(Project_2 PRIVATE ${MPI_C_INCLUDE_PATH})
