--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,12 @@ add_executable(Project_2
 
 
         #        test.c
-        scatter-demo.c
+        #        scatter-demo.c
+        mpi-fish-simulation.c
+        #        final-fish-co
+        #        mmunication.c
+        #        send-recv-squared.c
+        #        hello-test.c
 )
 
 # Enable MPI support
